# shumozizi

./: .gitattributes  .gitignore  .shumozizi-root  AGENTS.md  FIX_SUMMARY.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.codex/: config.toml
benchmarks/: README.md
docs/: CAPABILITY_FIRST_V3_IMPLEMENTATION_REPORT.md  CODEX_WORKFLOW.md  KNOWLEDGE_PACK_IMPORT.md  PAPER_PRODUCTIVITY_PILOT_REPORT.md  PRODUCTION_QUALITY_CLOSURE_FIX_SUMMARY.md  PRODUCTION_REVIEW_REPAIR_PLAN.md  QUALITY_FIRST_PILOT.md  R1-R5审核说明_当前版本.docx  V3_FIGURE_TEMPLATE_ADAPTER.md
knowledge/: INDEX.json  README.md  SOURCE_REGISTRY.json  figure-contract.md  model-selection-matrix.md  model-validation.md  problem-decomposition.md  sources.example.json
problems/: README.md
profiles/: cumcm.json  diangong.json  generic.json  mcm.json
regression/: fixed_baseline.json
schemas/: ambiguity_decisions.schema.json  approval_receipt.schema.json  approval_request.schema.json  argument_map.schema.json  atomic_knowledge_pattern.schema.json  atomic_pattern_index.schema.json  atomic_pattern_promotion_receipt.schema.json  atomic_pattern_review_registry.schema.json  atomic_pattern_review_report.schema.json  award_rating.schema.json  claim_evidence.schema.json  competition_profile.schema.json  contribution_ledger.schema.json  evidence_map.schema.json  execution_manifest.schema.json  execution_record.schema.json  experiment_plan.schema.json  external_source_registry.schema.json  figure_plan.schema.json  figure_receipt.schema.json  figure_render_receipt.schema.json  final_approval_receipt.schema.json  format_audit.schema.json  knowledge_antipattern.schema.json  knowledge_card.schema.json  knowledge_index.schema.json  knowledge_pack.schema.json  knowledge_review_request.schema.json  knowledge_review_session.schema.json  knowledge_review_thread_claim.schema.json  metric_provenance.schema.json  (+62 more)
(+797 files in other folders)
