[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shumozizi"
version = "0.2.0"
description = "Codex 原生数学建模工作流的可验证运行时"
requires-python = ">=3.12"
dependencies = [
  "jsonschema[format]>=4.23,<5",
  "pypdf>=5,<7",
  "pdfplumber>=0.11,<1",
  "Pillow>=10,<12",
  "PyYAML>=6,<7",
  "rfc8785>=0.1.4,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "ruff>=0.8,<1",
]
figure-template-smoke = [
  "matplotlib>=3.9,<4",
  "numpy>=2,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "--strict-config --strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
